--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,11 +1,7 @@
 
 
 .main {
-    font-size: 1.5rem;
-}
-
-.nav_left {
-    margin-left: 10%;
+    font-size: 1.3rem;
 }
 
 .bird{
@@ -32,3 +28,122 @@
     border-radius: 50px;
     background: rgb(2, 164, 204);
 }
+.drop_text a{
+    font-size: 1.2rem;
+}
+
+.border{
+    border-left: 1px solid black;
+}
+
+/* modal start */
+
+.modal-dialog {
+    position: absolute;
+    top: 50px;
+    right: 100px;
+    left: 0;
+    bottom : 1;
+    z-index: 10040;
+    overflow: auto;
+    overflow-y: auto;
+    border-radius: 25px;
+    font-size: 1.5rem;
+  }
+
+.modal-lg{
+    width: 30vw;
+    
+}
+.modal-body{
+    color :rgb(24, 16, 16)
+}
+
+.mod_img{
+    width: 12%;
+    height: 12%;
+    border-radius: 50px;
+}
+.mod_img img{
+    width: 100%;
+    height: 100%;
+}
+.text-area {
+    resize: none;
+    overflow: hidden;
+    min-height: 30px;
+    width: 100%;
+    border: none;
+ }
+
+.text-area:focus{
+    outline: none;
+}
+.text-area::placeholder{
+    color: rgb(142, 142, 240);
+}
+
+  
+
+.mod_btn{
+    position: absolute;
+    left : 1;
+    font-size: 1rem;
+}
+
+.mod_btn:hover{
+    background-color: rgb(204, 201, 201);
+    border-radius: 50px;
+}
+
+.modal-header{
+    border: none;
+}
+
+/* modal end */
+
+
+/* right nav */
+
+.right_list_div_img{
+    width: 90px;
+    height: 70px;
+    border-radius: 20px;
+}
+
+.right_list_div_img img{
+    width: 100%;
+    height: 100%;
+}
+
+.search_bar{
+    border-radius: 30px;
+    font-size: 1.3rem;
+    border : none;
+}
+.right_div {
+    border-radius:20px ;
+}
+.right_div a{
+    border: none !important;
+}
+.right_div a:hover{
+    background-color: rgb(204, 201, 201) !important;
+}
+
+
+/* middle section start */
+
+.mid_section_hr {
+    width: 105%;
+    border-bottom :1px solid rgb(128, 124, 124);
+    margin-top : 70px;
+    margin-left: -12px !important;
+
+    /* margine-left: -10px; */
+    /* border-bottom: 1px solid black; */
+}
+
+/* middle section end */
+
+
