--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -5,7 +5,7 @@
 }
 
 .bird{
-    color : #65cce9;
+    color : rgb(2, 164, 204);
 }
 
 .nav-item:hover{
@@ -13,28 +13,48 @@
     border-radius: 30px;
     background-color:rgb(195, 213, 248);
 }
+
+.nav-item a:hover{
+    color: black;
+}
+
 .nav-item a{
     font-size: 1.4rem;
+    text-decoration: none;
     color: rgb(24, 16, 16);
-}   
+}  
+
+.nav-item {
+    padding : 10px 15px 10px 15px;
+    margin-bottom: 10px;
+}
+
 .more_svg{
     width: 35px;
     height: 35px;
+    margin-left: -7px;
 }
-.tweet_btn{
-    margin-top: 30px;
-    padding: 5px 60px 5px 60px;
+.t-btn{
+    margin-top: 40px;
+    margin-left: -30px;
+}
 
+.t-btn:hover{
+    background-color: white;
+}
+
+.tweet_btn{
+    padding: 18px 95px 18px 95px;
     border-radius: 50px;
     background: rgb(2, 164, 204);
 }
+
 .drop_text a{
     font-size: 1.2rem;
 }
 
 .active{
-    background-color: red ;
-    color: #fff;
+     font-weight: 800;
  }
 
 
