--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -71,7 +71,6 @@
     overflow: auto;
     overflow-y: auto;
     border-radius: 25px;
-    font-size: 1.5rem;
   }
 
 .modal-lg{
@@ -97,6 +96,7 @@
     min-height: 30px;
     width: 100%;
     border: none;
+    font-size: 1.4rem;
  }
 
 .text-area:focus{
@@ -144,15 +144,22 @@
     font-size: 1.3rem;
     border : none;
 }
+
 .right_div {
-    border-radius:20px ;
+    border-radius:20px;
+    margin: 20px 0px;
 }
+
 .right_div a{
-    border: none !important;
+    background: transparent;
+    border: none;
 }
+
 .right_div a:hover{
     background-color:rgb(233, 230, 230) !important;
 }
+
+
 
 
 /* middle section start */
@@ -176,6 +183,7 @@
 /* right follow section start*/
 
 .follow_div{
+    margin-top: 20px;
     border-radius: 30px;
 }
 
@@ -198,3 +206,26 @@
 }
 
 /* right follow section end */
+
+.de_img{
+    border-radius: 30px;
+}
+
+.mid_scroll{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100vh;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+  
+  .mid_scroll::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
+
+.mid_div_up{
+    width: 100%;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-bottom: 1px solid rgb(232, 246, 232);
+}
