--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -174,6 +174,8 @@
     /* border-bottom: 1px solid black; */
 }
 
+
+
 .mid_div:hover{
     background-color: rgb(233, 230, 230);
 }
@@ -219,13 +221,17 @@
     scrollbar-width: none; /* for Firefox */
 }
   
-  .mid_scroll::-webkit-scrollbar {
+.mid_scroll::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
-  }
+}
 
 
-.mid_div_up{
-    width: 100%;
-  background-color: rgba(255, 255, 255, 0.85);
-  border-bottom: 1px solid rgb(232, 246, 232);
+.mid_header{
+    background-color: rgba(255, 255, 255, 0.85);
+    height: 50px;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 1.4rem;
+    margin-bottom: 15px;
 }
