--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -8,23 +8,23 @@
     color : rgb(2, 164, 204);
 }
 
-.nav-item:hover{
+.side_nav:hover{
     transition: 0.1s;
     border-radius: 30px;
     background-color:rgb(195, 213, 248);
 }
 
-.nav-item a:hover{
+.side_nav a:hover{
     color: black;
 }
 
-.nav-item a{
+.side_nav a{
     font-size: 1.4rem;
     text-decoration: none;
     color: rgb(24, 16, 16);
 }  
 
-.nav-item {
+.side_nav {
     padding : 10px 15px 10px 15px;
     margin-bottom: 10px;
 }
@@ -44,7 +44,7 @@
 }
 
 .tweet_btn{
-    padding: 18px 95px 18px 95px;
+    padding: 15px 85px 15px 85px;
     border-radius: 50px;
     background: rgb(2, 164, 204);
 }
@@ -235,3 +235,14 @@
     font-size: 1.4rem;
     margin-bottom: 15px;
 }
+
+
+.exp_div li a:hover{
+    border-bottom: 2px solid black;
+    background-color: blanchedalmond;
+}
+
+.exp_div li a {
+    margin-right: 8px;
+}
+
